--- a/MIST143_Traveler/Views/ProductListPage/ProductListHomePage.cshtml
+++ b/MIST143_Traveler/Views/ProductListPage/ProductListHomePage.cshtml
@@ -130,7 +130,7 @@
                         <div class="card" style="">
                             <img class="card-img-top" src="../Images/ProductListPageImages/landscape_101.jpg" alt="Card image cap">
                             <div class="card-body">
-                                <a href="https://localhost:44302/ProductPage/Index">
+                                <a href="https://localhost:44302/shopping/List?TravelProductId=8">
                                     <h3 class="activity-card-title">
                                         【領券現折100】Klook獨家優惠｜台北101觀景台門票｜萬聖節搗蛋派對｜高空Sky Lounge百萬夜景
                                     </h3>
@@ -358,9 +358,11 @@
                         <div class="card" style="">
                             <img class="card-img-top" src="../Images/ProductListPageImages/landscape_xzckg1iq60tcpszvmjya.jpg" alt="Card image cap">
                             <div class="card-body">
-                                <h3 class="activity-card-title">
-                                    【獨家優惠】東京豐洲 teamLab Planets TOKYO 門票
-                                </h3>
+                                <a href="https://localhost:44302/shopping/List?TravelProductId=2015">
+                                    <h3 class="activity-card-title">
+                                        【獨家優惠】東京豐洲 teamLab Planets TOKYO 門票
+                                    </h3>
+                                </a>
                                 <div class="page-activity-recommend-score">
                                     <span class="page-activity-recommend-score-number">
                                         <svg width="12" height="12" class="svg-icon"></svg>
@@ -440,9 +442,11 @@
                         <div class="card" style="">
                             <img class="card-img-top" src="../Images/ProductListPageImages/landscape_zq2dtc7izos2pqdokgog.jpg" alt="Card image cap">
                             <div class="card-body">
-                                <h3 class="activity-card-title">
-                                    加州迪士尼樂園＆迪士尼加州冒險樂園門票
-                                </h3>
+                                <a href="https://localhost:44302/shopping/List?TravelProductId=2016">
+                                    <h3 class="activity-card-title">
+                                        加州迪士尼樂園＆迪士尼加州冒險樂園門票
+                                    </h3>
+                                </a>
                                 <div class="page-activity-recommend-score">
                                     <span class="page-activity-recommend-score-number">
                                         <svg width="12" height="12" class="svg-icon"></svg>
