--- a/MIST143_Traveler/Views/Shopping/ShoppingCartSession.cshtml
+++ b/MIST143_Traveler/Views/Shopping/ShoppingCartSession.cshtml
@@ -12,7 +12,7 @@
     <article class="payContainer">
         @*<form method="post" action="PayData">*@
         <div class="payContainerInner">
-            <h3 class="subTitle py-3">購物車</h3>
+            <h3 class="subTitle py-3">已報名的行程</h3>
             <div>
                 <div class="row">
                     <div class="col-9">
