--- a/MIST143_Traveler/Views/Shared/_Layout.cshtml
+++ b/MIST143_Traveler/Views/Shared/_Layout.cshtml
@@ -84,7 +84,7 @@
                     }
                 }
 
-                <a href="@Url.Content("~/Shopping/ShoppingCartSession")">已報名行程</a>
+                <a href="@Url.Content("~/Shopping/ShoppingCartSession")">已報名的行程</a>
 
                 @{
                     if (Accessor.HttpContext.Session.Keys.Contains(CDictionary.SK_Login))
