--- a/MIST143_Traveler/Views/Shopping/List.cshtml
+++ b/MIST143_Traveler/Views/Shopping/List.cshtml
@@ -193,7 +193,7 @@
                                                         -
                                                     </button>
                                                     <div class="number">
-                                                        @*<input type="number" class="productNumber" id="productNum" asp-for="_CShoppingCartDetailViewModel[0].Count" value="1" />*@
+                                                        <input type="number" class="productNumber" id="productNum" asp-for="_CShoppingCartDetailViewModel[0].Count" value="1" />
                                                     </div>
                                                     <button type="button" id="productPlus"
                                                             class="btn btn-outline-secondary">
@@ -214,11 +214,11 @@
                                             </div>
                                             <div class="rightBtns">
 
-                                                @*<input type="hidden" asp-for="_CShoppingCartDetailViewModel[0].TravelProductId" value="@Model.TravelProductId" />
+                                                <input type="hidden" asp-for="_CShoppingCartDetailViewModel[0].TravelProductId" value="@Model.TravelProductId" />
                                                 <input type="hidden" asp-for="_CShoppingCartDetailViewModel[0].TravelProductName" value="@Model.TravelProductName" />
                                                 <input type="hidden" asp-for="_CShoppingCartDetailViewModel[0].Price" value="@Model.Price" />
                                                 <input type="hidden" asp-for="_CShoppingCartDetailViewModel[0].Productpicture" value="@Model.Productpictures.FirstOrDefault().TravelPicture1" />
-                                                <input type="submit" value="  立即預定  " class="btn btn-main ms-3" />*@
+                                                <input type="submit" value="  立即預定  " class="btn btn-main ms-3" />
                                             </div>
                                         </div>
                                     </form>
