--- a/MIST143_Traveler/Views/Shopping/List.cshtml
+++ b/MIST143_Traveler/Views/Shopping/List.cshtml
@@ -208,7 +208,7 @@
                                                 <div class="titleFontStyle">NT$ <span id="totalPrice"></span></div>
                                                 <div class="subInfoText">完成所有必填選項</div>
                                                 <br />
-                                                <div>剩餘:  <span class="stocks">@Model.Stocks</span> / @Model.Quantity 個位置<span class="text-danger hiddenEle soldInfo ms-2">快售完</span></div>
+                                                <div>剩餘:  <span class="stocks">@Model.Stocks</span> / @Model.Quantity 個位置<span class="text-danger hiddenEle soldInfo ms-2">快售完，敬請把握</span></div>
                                                 <br />
                                                 <div >倒數:  @Model.RemainingDays 天出團</div>
                                             </div>
