--- a/MIST143_Traveler/Views/TransportationPage/testt.cshtml
+++ b/MIST143_Traveler/Views/TransportationPage/testt.cshtml
@@ -144,9 +144,11 @@
             <br />
             <br />
             <div class="d-flex">
-                <div class="card mb-md-auto" style="width:1000px">
+                <div class="card mb-md-auto" style="width:400px;height:500px;">
                     <a href="@Url.Action("List" ,"shopping", new {TravelProductId=item.TravelProductId})">
-                        <img src="https://localhost:44338/images/@item.TravelPicture1" style="height:150px" class="card-img-top">
+
+                        <img src="https://localhost:44338/images/TravelProductPictures/@item.TravelPicture1" style="height:150px" class="card-img-top">
+
                     </a>
 
                     <div class="card-body">
