--- a/MIST143_Traveler/Views/CustomerCenter/List.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/List.cshtml
@@ -217,13 +217,16 @@
                         })
                         return;
                     }
+                    $("#Cname").text(datas.data)
                     Swal.fire(
+                        
                         '您的變更已儲存!',
                         '',
                         'success'
                     )
+                    
                 }
-            })
+             })
         }
          //抓資料庫城市資料
 
