--- a/MIST143_Traveler/Views/Shared/Components/Coupon/Default.cshtml
+++ b/MIST143_Traveler/Views/Shared/Components/Coupon/Default.cshtml
@@ -107,7 +107,7 @@
                     let co = document.querySelector("#COCO");
                     cc.innerHTML = htmldatas;
                     co.append(cc);
-
+                    console.log(datas);
                     Swal.fire(
                         '兌換成功',
                         '',
