--- a/MIST143_Traveler/Views/Shared/_Layout.cshtml
+++ b/MIST143_Traveler/Views/Shared/_Layout.cshtml
@@ -102,7 +102,7 @@
                                 }
                                 else
                                 {
-                                    <img src="~/Images/contact/300.png" id="avatarShow" style="width:30px;height:30px;border-radius:50%" class="avatarShow" />@v.MemberName
+                                    <img src="~/Images/contact/300.png" id="avatarShow" style="width:30px;height:30px;border-radius:50%" class="avatarShow" /><span id="Cname">@v.MemberName</span>
                                 }
                             }
 
