--- a/MIST143_Traveler/Views/CustomerCenter/newLoginpag.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/newLoginpag.cshtml
@@ -101,8 +101,8 @@
         //    'You clicked the button!',
         //    'success'
         //)
-        act.value = "d555@gmail.com";
-        pas.value = "a1234567";
+        act.value = "miyol311@yahoo.com.tw";
+        pas.value = "12345678";
         }
 
 
@@ -137,11 +137,11 @@
 
             },
             error: function (err) {//其他錯誤 代表沒有輸入值
-                Swal.fire('請輸入資料');
+                Swal.fire('輸入錯誤');
             },
 
         });
-        }
+      }
 
     </script>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
