--- a/MIST143_Traveler/Views/Shopping/List.cshtml
+++ b/MIST143_Traveler/Views/Shopping/List.cshtml
@@ -53,16 +53,16 @@
             </div>
         </div>
         @*<img src="http://192.168.36.53:81/images/TravelProductPictures/af1c30ae-e8c4-447a-aec6-d233b64d02b8.jpg"/>*@
-        @*<div class="search-page-breadcrumb search-breadcrumb">
+        <div class="search-page-breadcrumb search-breadcrumb">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="@Url.Content("~/Home/Index")">首頁</a></li>
                     <li class="breadcrumb-item" style=" --light: #000000;"><a href="@Url.Content("~/ProductListPage/ProductListHomePage")">玩樂</a></li>
                     <li class="breadcrumb-item active" style=" --light: #000000;" aria-current="page"><a href="@Url.Content("~/ProductListPage2/ProductListPage")">搜尋結果</a></li>
-                    <li class="breadcrumb-item active" style=" --light: #000000;" aria-current="page">@Model.cproductlists.Where(d=>d.TravelProductId==Model.TravelProductId).Select(d=>d.coutryname).FirstOrDefault()</li>
+                    <li class="breadcrumb-item active" style=" --light: #000000;" aria-current="page">@Model.CountryName</li>
                 </ol>
             </nav>
-        </div>*@
+        </div>
 
         <div class="標題">
             <h3 id="productName">@Model.TravelProductName</h3>
