--- a/MIST143_Traveler/Views/CustomerCenter/OrderCancel.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/OrderCancel.cshtml
@@ -28,8 +28,8 @@
             <textarea class="form-control" id="text"></textarea>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" onclick="se()">Send message</button>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">關閉</button>
+            <button type="button" class="btn btn-primary" onclick="secc()">送出</button>
         </div>
     </form>
 </div>
@@ -40,7 +40,7 @@
         var v = JsonSerializer.Deserialize<Member>(OBJ);
 
     }
-    function se() {
+    function secc() {
 
             var pData = {
 
